@@ -1,0 +1,10 @@
+Title: Fixed rendering of perfometers when no RRDs exist yet
+Level: 1
+Component: multisite
+Class: fix
+Compatible: compat
+State: unknown
+Version: 1.4.0i3p1
+Date: 1484828434
+
+
