@@ -48,6 +48,7 @@
     * 4145 FIX: Fixed exception when setting output_format in wrong case
     * 4226 FIX: Custom inventory painters are now correctly loaded when declared with inventory_displayhints
     * 4307 FIX: Fixed wrong filters in Eventviews linked by Tactical Overview
+    * 4282 FIX: Fixed rendering of perfometers when no RRDs exist yet
 
     WATO:
     * 4146 FIX: Fixed broken "Global settings" when having the Event Console disabled via "omd config"
